--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -37,4 +37,12 @@
     </ion-list>
 
   </ion-content>
+
+  <div class="float-button">
+   <span class="height-fix">
+      <a class="content" ng-click="update()">
+        <i class="ion-android-refresh"> </i>
+      </a>
+     </span>
+  </div>
 </ion-view>
